--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="wrap-map-link">
                 <h1>Mapa Climático Interactivo</h1>
                 <h2>Provisto por información abierta de IQAir</h2>
-                <a class="btn btn-default" target="_blank" href="map.html">Ver mapa</a>
+                <a class="btn btn-default" href="map.html">Ver mapa</a>
             </div>            
         </div>
         <div class="iqstats">
