--- a/map.html
+++ b/map.html
@@ -10,7 +10,12 @@
 <body>
     <div class="navbar navbar-map">
         <div class="nav-wrap">
-            <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+            <a href="./index.html">
+                <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+            </a>
+            <a href="https://iqair.com">
+                <img class= "logo-iq" src="./assets/img/ic-logo-iq-air-blue.svg" alt="logo IQAir">
+            </a>
         </div>
     </div>
     <div class="map-full">
