- coord fix - zoom fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="navbar">
             <div class="nav-wrap">
                 <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
-                <img class= "logo-iq" src="./assets/img/ic-logo-iq-air-blue.svg" alt="logo IQAir">
+                <a href="https://iqair.com">
+                    <img class= "logo-iq" src="./assets/img/ic-logo-iq-air-blue.svg" alt="logo IQAir">
+                </a>
             </div>
         </div>
         <div class="map">
