--- a/map.html
+++ b/map.html
@@ -20,7 +20,7 @@
     </div>
     <div class="map-full">
         <iframe 
-            src="https://www.iqair.com/air-quality-map?lat=-34.9964963&lng=-64.9672817&zoomLevel=6"
+            src="https://www.iqair.com/air-quality-map?lat=-28.127479&lng=-65.488939&zoomLevel=6"
             frameborder="0"
             width="100%">
         </iframe>
