--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <div class="navbar">
             <div class="nav-wrap">
                 <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                <div class="nav">
+                    <ul>
+                        <li><a class="btn-nav" href="#">Que es esto</a></li>
+                        <li><a class="btn-nav" href="#">Cambio climatico</a></li>
+                        <li><a class="btn-nav" href="#">Como ayudar</a></li>
+                    </ul>
+                </div>
                 <a href="https://iqair.com">
                     <img class= "logo-iq" src="./assets/img/ic-logo-iq-air-blue.svg" alt="logo IQAir">
                 </a>
