- wip main hero

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="app">
         <div class="navbar">
             <div class="nav-wrap">
-                <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                <div>
+                    <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                </div>
                 <div class="nav">
                     <ul>
                         <li><a class="btn-nav" href="#">Que es esto</a></li>
@@ -19,16 +21,32 @@
                         <li><a class="btn-nav" href="#">Como ayudar</a></li>
                     </ul>
                 </div>
-                <a href="https://iqair.com">
-                    <img class= "logo-iq" src="./assets/img/ic-logo-iq-air-blue.svg" alt="logo IQAir">
-                </a>
+                <div class="iqlogo-wrap">
+                    <span class="powered">powered by</span>
+                    <a href="https://iqair.com">                    
+                        <img class= "logo-iq" src="./assets/img/ic-logo-iq-air-blue.svg" alt="logo IQAir">
+                    </a>
+                </div>               
             </div>
         </div>
         <div class="map">
             <div class="wrap-map-link">
-                <h1>Mapa Climático Interactivo</h1>
-                <h2>Provisto por información abierta de IQAir</h2>
-                <a class="btn btn-default" href="map.html">Ver mapa</a>
+                <h1>CALIDAD DEL AIRE</h1>
+                <div class="subtitle">
+                    <h2>Visualiza registros abiertos sobre calidad del aire, 
+                        reportes de incendios activos, alertas del clima y 
+                        otros indicadores ambientales.
+                    </h2>
+                </div>                
+                <a class="btn btn-default vermapa" href="map.html">Ver mapa interactivo</a>
+            </div>
+            <div class="disclosure">
+                <p>
+                    Atención: el mapa podría requerir un alto consumo de datos. 
+                    Algunos dispositivos móviles podrían no ser del todo compatibles, 
+                    se recomienda uso desde notebook o PC con buena conexión a Internet.
+                    Todos los datos abiertos son provistos por IQAir.
+                </p>
             </div>            
         </div>
         <div class="iqstats">
