--- a/map.html
+++ b/map.html
@@ -11,7 +11,9 @@
     <div class="navbar navbar-map">
         <div class="nav-wrap">
             <div>
-                <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                <a href="index.html">
+                    <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                </a>
             </div>
             <div class="iqlogo-wrap">
                 <span class="powered">powered by</span>
