--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>            
         </div>
         <div class="iqstats">
-
+            Atención: esta versión es una demo. <a href="https://www.figma.com/file/iubdBWfzrBFaA6xIFe2Vo7/Acuerdo-Ambiental-Dash?node-id=0%3A1">Ver mockup completo.</a>
         </div>
         <div class="banner-fuego">
 
