--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             </div>            
         </div>
         <div class="iqstats">
-            Atención: esta versión es una demo. <a href="https://www.figma.com/file/iubdBWfzrBFaA6xIFe2Vo7/Acuerdo-Ambiental-Dash?node-id=0%3A1">Ver mockup completo.</a>
+            <div name="airvisual_widget" key="61579b4b68d5462631ab87f0"></div>
+            <p>Atención: esta versión es una demo. <a href="https://www.figma.com/file/iubdBWfzrBFaA6xIFe2Vo7/Acuerdo-Ambiental-Dash?node-id=0%3A1">Ver mockup completo.</a></p>
         </div>
         <div class="banner-fuego">
 
@@ -65,5 +66,6 @@
 
         </div>
     </div>
+    <script type="text/javascript" src="http://cdn.airvisual.net/assets/widgets/widget_v3.0.js"></script>
 </body>
 </html>
