--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 
         </div>
     </div>
-    <script type="text/javascript" src="http://cdn.airvisual.net/assets/widgets/widget_v3.0.js"></script>
+    <script type="text/javascript" src="https://cdn.airvisual.net/assets/widgets/widget_v3.0.js"></script>
 </body>
 </html>
