--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <nav class="navbar">
         <div class="nav-wrap">
             <div>
-                <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                <a href="https://acuerdoambiental.com.ar">
+                    <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
+                </a>
             </div>
             <div class="nav">
                 <ul>
