--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                     <img class= "logo-aa" src="./assets/img/acuerdo-logo.png" alt="logo del programa acuerdo ambiental">
                 </a>
             </div>
-            <div class="nav">
+            <!-- <div class="nav">
                 <ul>
                     <li><a class="btn-nav" href="#">Que es esto</a></li>
                     <li><a class="btn-nav" href="#">Cambio climatico</a></li>
                     <li><a class="btn-nav" href="#">Como ayudar</a></li>
                 </ul>
-            </div>
+            </div> -->
             <div class="iqlogo-wrap">
                 <span class="powered">powered by</span>
                 <a href="https://iqair.com">                    
