--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
             </div>            
         </section>
         <section class="iqstats">
-            <div class="iqstats-wrapper">
-                <h2>Medidor de calidad del aire ubicado en El Rodeo, Ambato, Catamarca.</h2>
-                <div name="airvisual_widget" key="61579b4b68d5462631ab87f0"></div>
+            <div class="iqstats-wrapper">                
+                <div class="widget-air">
+                    <div name="airvisual_widget" key="61579b4b68d5462631ab87f0"></div>
+                </div>
+                <p>Medidor de calidad del aire ubicado en El Rodeo, Ambato, Catamarca.</p>
             </div>
         </section>
         <div class="banner-fuego">
