--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
     </main>
     <footer>
-        <p>fuegos.ar es una iniciativa sin fines de lucro de Acuerdo Ambiental, con el apoyo de IQair</p>
-        <p>esta versión es una demo. <a href="https://www.figma.com/file/iubdBWfzrBFaA6xIFe2Vo7/Acuerdo-Ambiental-Dash?node-id=0%3A1">Ver mockup completo.</a></p>
+        <p>fuegos.ar es una iniciativa sin fines de lucro de <a href="https://www.acuerdoambiental.com.ar">Acuerdo Ambiental</a>, con el apoyo de <a href="https://www.iqair.com/">IQair</a></p>
+        <!-- <p>esta versión es una demo. <a href="https://www.figma.com/file/iubdBWfzrBFaA6xIFe2Vo7/Acuerdo-Ambiental-Dash?node-id=0%3A1">Ver mockup completo.</a></p> -->
     </footer>
     <script type="text/javascript" src="https://cdn.airvisual.net/assets/widgets/widget_v3.0.js"></script>
 </body>
