--- a/index.html
+++ b/index.html
@@ -57,13 +57,21 @@
                     <div name="airvisual_widget" key="61579b4b68d5462631ab87f0"></div>
                 </div>
                 <p>Medidor de calidad del aire ubicado en El Rodeo, Ambato, Catamarca.</p>
+                <span>[ Temporalmente fuera de servicio ]</span>
             </div>
         </section>
         <div class="banner-fuego">
 
         </div>
         <div class="podcast">
-
+            <div class="podcast-wrapper">
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/episode/2AEE0mT7anHQfLagzeOK06?utm_source=generator" width="100%"
+                    height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy">
+                </iframe>
+            </div>
         </div>
         <div class="cta">
 
